# mantis_core

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  WAVE1_COMPLETION_REPORT.md  WAVE2_STATUS.md  build.rs  libcalendar_test.rlib  libdimension_test.rlib  libtable_test.rlib
archive/: README.md
archive/metadata/: types.rs
archive/model/: dimension_role.rs  pivot_report.rs  source.rs
archive/model/emitter/: mod.rs  source.rs
archive/model/loader/: mod.rs  sql_expr.rs
archive/semantic/: column_lineage.rs  semantic_model.rs
archive/semantic/model_graph/: async_graph.rs  dependencies.rs  mod.rs  path.rs  validation.rs
archive/semantic/planner/: logical.rs  mod.rs
database_test/data/: README.md
docs/: semantic-model-dsl-spec-v3.1.md
docs/architecture/: graph-cache.md  unified-graph.md
docs/diagrams/: graph-cache-quick-reference.md  graph-cache-system.md  unified-graph-construction-phase1.md  unified-graph-construction-phase2.md  unified-graph-query-interface.md  unified-graph-system-overview.md  unified-graph-types.md
docs/plans/: 2025-01-25-graph-cache-implementation.md  2025-01-25-graph-cache-integration-design.md  2026-01-18-dsl-pivot-design.md  2026-01-18-phase1-dsl-parser.md  2026-01-20-phase2-implementation.md  2026-01-20-phase2-lowering-and-validation.md  2026-01-20-phase2-semantic-model-bridge.md  2026-01-20-phase3-semantic-query-translation.md  2026-01-21-phase3-tasks6-12.md  2026-01-21-wtd-prior-period-fixes-design.md  2026-01-21-wtd-prior-period-fixes-implementation.md  2026-01-23-unified-graph-rebuild.md  2026-01-26-aggressive-cleanup-archive-old-code.md  2026-01-26-database-test-environment-design.md  2026-01-26-database-test-environment-implementation.md  2026-01-26-dp-optimizer-design.md  2026-01-26-dp-optimizer-implementation.md  2026-01-26-sql-expression-parsing-design.md  2026-01-26-sql-expression-parsing-implementation.md  2026-01-26-sql-planner-design.md  2026-01-26-sql-planner-enhancements-design.md  2026-01-26-sql-planner-implementation.md  2026-01-26-sql-planner-wave1-implementation.md  2026-01-26-sql-planner-wave2-implementation.md  2026-01-26-sql-planner-wave3-implementation.md  2026-01-29-measure-expansion-design.md  2026-01-29-measure-expansion-impl.md
examples/: ecommerce.mantis  financial_services.mantis  healthcare_analytics.mantis  inventory.mantis  minimal.mantis  multi_table_join.mantis  retail_analytics.mantis  sales.mantis
src/: compile.rs  lib.rs
src/cache/: graph_cache.rs  hash.rs  inference_cache.rs  mod.rs
src/config/: connection.rs  mod.rs  settings.rs
src/crypto/: master_key.rs  mod.rs
src/dsl/: ast.rs  lexer.rs  mod.rs  parser.rs  span.rs  sql_expr.rs  validation.rs
src/lowering/: mod.rs
src/lsp/: backend.rs  mod.rs  project.rs  transport.rs
src/lsp/analysis/: context.rs  document.rs  entities.rs  mod.rs  symbols_generated.rs
src/lsp/capabilities/: completions.rs  definition.rs  diagnostics.rs  hover.rs  inlay.rs  mod.rs  references.rs  rename.rs  signature.rs  symbols.rs
src/metadata/: mod.rs  provider.rs  worker_provider.rs
src/model/: calendar.rs  defaults.rs  dimension.rs  expr.rs  expr_parser.rs  expr_validation.rs  fact.rs  measure.rs  mod.rs  query.rs  report.rs  table.rs  types.rs
src/model/emitter/: format.rs  relationship.rs
src/model/loader/: lua.rs  prelude.lua
src/planner/: expr_converter.rs  join_builder.rs  mod.rs
src/planner/cost/: estimator.rs  mod.rs
src/planner/join_optimizer/: cardinality.rs  dp_optimizer.rs  join_graph.rs  mod.rs
src/planner/logical/: builder.rs  mod.rs  plan.rs
src/planner/physical/: converter.rs  join_optimizer.rs  mod.rs  plan.rs
src/semantic/: error.rs  executor.rs  mod.rs
src/semantic/graph/: builder.rs  integration_tests.rs  mod.rs  query.rs  tests.rs  types.rs
src/semantic/inference/: engine.rs  mod.rs  model_integration.rs  rules.rs  scoring.rs
src/semantic/model_graph/: mod.rs  resolution.rs  tests.rs
src/semantic/planner/: emit.rs  emit_multi.rs  emit_time.rs  prune.rs  resolve.rs  resolved.rs  types.rs  validate.rs
src/semantic/unified_graph/: query.rs
src/sql/: ddl.rs  dml.rs  expr.rs  mod.rs  query.rs  test_utils.rs  token.rs  types.rs
src/sql/dialect/: ansi.rs  bigquery.rs  databricks.rs  duckdb.rs  helpers.rs  mod.rs  mysql.rs  postgres.rs  redshift.rs  snowflake.rs  tsql.rs
src/sql/snapshots/: mantis__sql__ddl__tests__snapshot_tests__create_materialized_view_postgres.snap  mantis__sql__ddl__tests__snapshot_tests__create_or_replace_view_postgres.snap  mantis__sql__ddl__tests__snapshot_tests__create_view_basic_mysql.snap  mantis__sql__ddl__tests__snapshot_tests__create_view_basic_postgres.snap  mantis__sql__ddl__tests__snapshot_tests__create_view_basic_tsql.snap  (+30 more)
src/translation/: mod.rs
src/validation/: mod.rs
src/web/: database.rs  mod.rs  server.rs
src/worker/: client.rs  embedded.rs  error.rs  mod.rs  protocol.rs
tests/: calendar_test.rs  compile_integration_test.rs  dsl_integration.rs  table_test.rs  types_test.rs
tests/lowering/: calendar_lowering_test.rs  defaults_lowering_test.rs  dimension_lowering_test.rs  lowering_test.rs  measure_lowering_test.rs  report_lowering_test.rs  table_lowering_test.rs
tests/model/: defaults_test.rs  dimension_test.rs  measure_test.rs  report_test.rs  table_test.rs  types_test.rs
tests/planner/: cardinality_estimator_test.rs  cost_accuracy_test.rs  cost_estimate_test.rs  cost_test.rs  dp_optimizer_test.rs  expr_converter_test.rs  filter_selectivity_test.rs  group_by_test.rs  group_cost_test.rs  integration_test.rs  join_builder_test.rs  join_cardinality_test.rs  join_cost_test.rs  join_graph_test.rs  join_on_test.rs  join_optimizer_test.rs  optimizer_integration_test.rs  optimizer_strategy_test.rs  performance_test.rs  physical_filter_test.rs  physical_plan_test.rs  table_scan_cost_test.rs  wave2_integration_test.rs
tests/translation/: integration_test.rs  translation_test.rs
tests/validation/: validation_test.rs
typst/: measures_data.csv  rolling_measures1.typ
worker/: go.mod  go.sum
worker/cmd/worker/: main.go
(+36 files in other folders)
