[package]
name = "mantis"
version = "0.1.0"
edition = "2021"
description = "A universal semantic layer that compiles to multi-dialect SQL"
license = "MIT"

[lib]
name = "mantis"
path = "src/lib.rs"

[[bin]]
name = "mantis"
path = "src/bin/main.rs"

[[bin]]
name = "schema_gen"
path = "src/bin/schema_gen.rs"

[dependencies]
mlua = { version = "0.10", features = ["lua54", "vendored"] }
petgraph = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
sqlparser = "0.53"
thiserror = "2.0"

# DSL Parser
chumsky = "1.0.0-alpha.7"
ariadne = "0.5"

toml = "0.9.8"
regex = "1"
once_cell = "1.20"

# Async runtime for worker communication
tokio = { version = "1", features = ["process", "io-util", "io-std", "sync", "time", "rt-multi-thread", "macros", "net"] }
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

# Metadata cache
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"

# String inflection (pluralization, case conversion)
Inflector = "0.11"

# CLI and secure credential storage
clap = { version = "4", features = ["derive"] }
ring = "0.17"
base64 = "0.22"
rand = "0.9"

# Web server (optional, for UI)
axum = { version = "0.8.7", optional = true }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
tower-http = { version = "0.6.8", features = ["cors"], optional = true }
open = { version = "5", optional = true }
ryu = "1.0.22"

# Language Server Protocol
tower-lsp = "0.20"
tree-sitter = "0.25"
tree-sitter-lua = "0.2"
tokio-tungstenite = "0.28"
dashmap = "6.1"

[features]
default = []
ui = ["axum", "rust-embed", "mime_guess", "tower-http", "open"]
embedded-worker = []  # Embed Go worker binary in the Rust binary

[dev-dependencies]
insta = "1.41"

[[test]]
name = "types_test"
path = "tests/model/types_test.rs"

[[test]]
name = "table_test"
path = "tests/model/table_test.rs"

[[test]]
name = "calendar_test"
path = "tests/model/calendar_test.rs"

[[test]]
name = "measure_test"
path = "tests/model/measure_test.rs"

[[test]]
name = "dimension_test"
path = "tests/model/dimension_test.rs"

[[test]]
name = "report_test"
path = "tests/model/report_test.rs"

[[test]]
name = "calendar_lowering_test"
path = "tests/lowering/calendar_lowering_test.rs"

[[test]]
name = "dimension_lowering_test"
path = "tests/lowering/dimension_lowering_test.rs"

[[test]]
name = "table_lowering_test"
path = "tests/lowering/table_lowering_test.rs"

[[test]]
name = "measure_lowering_test"
path = "tests/lowering/measure_lowering_test.rs"

[[test]]
name = "report_lowering_test"
path = "tests/lowering/report_lowering_test.rs"

[[test]]
name = "defaults_lowering_test"
path = "tests/lowering/defaults_lowering_test.rs"

[[test]]
name = "validation_test"
path = "tests/validation/validation_test.rs"

[[test]]
name = "translation_test"
path = "tests/translation/translation_test.rs"

[[test]]
name = "integration_test"
path = "tests/translation/integration_test.rs"

[[test]]
name = "physical_plan_test"
path = "tests/planner/physical_plan_test.rs"

[[test]]
name = "cost_test"
path = "tests/planner/cost_test.rs"

[[test]]
name = "cost_estimate_test"
path = "tests/planner/cost_estimate_test.rs"

[[test]]
name = "table_scan_cost_test"
path = "tests/planner/table_scan_cost_test.rs"

[[test]]
name = "planner_integration_test"
path = "tests/planner/integration_test.rs"

[[test]]
name = "expr_converter_test"
path = "tests/planner/expr_converter_test.rs"

[[test]]
name = "join_builder_test"
path = "tests/planner/join_builder_test.rs"

[[test]]
name = "physical_filter_test"
path = "tests/planner/physical_filter_test.rs"

[[test]]
name = "join_on_test"
path = "tests/planner/join_on_test.rs"

[[test]]
name = "group_by_test"
path = "tests/planner/group_by_test.rs"
